--- a/book.sty
+++ b/book.sty
@@ -77,6 +77,7 @@
 %================字體================%
 %设置数学字体
 \RequirePackage{amssymb,amsmath}
+\RequirePackage{stmaryrd}
 \RequirePackage{fontspec}
 %si unit
 \RequirePackage{siunitx}
