--- a/xelatex-guide-book.tex
+++ b/xelatex-guide-book.tex
@@ -479,7 +479,7 @@ fontspec宏包有一个和这个宏包名字一样的命令，这个命令非常
 
 另外还有一个有用的命令就是newfontfamily，这个命令相当于把fontspec命令包起来再新建一个命令。新建的那些字体命令就像\verb+\sffamily+之类的命令一样使用。比如加上这一行命令之后：
 \begin{Verbatim}
-\verb+\newfontfamily{\ubuntu}[Scale=3]{Ubuntu}+
+\newfontfamily{\ubuntu}[Scale=3]{Ubuntu}
 \end{Verbatim}
 
 后面就可以使用 \verb+\ubuntu{这个命令了}+ 。
