--- a/book_cover.tex
+++ b/book_cover.tex
@@ -26,7 +26,7 @@
 \author{万泽}
 %\subtitle{一个简单的封面}
 %\date{\today}
-\version{第四次修订版}
+%\version{第四次修订版}
 
 \begin{titlepage}
 \newgeometry{left=1cm,right=1cm,top=1cm,bottom=1cm}
