--- a/book_cover_src/book_cover.tex
+++ b/book_cover_src/book_cover.tex
@@ -2,11 +2,13 @@
 
 
 \RequirePackage{geometry}
+
+%中文環境
 \RequirePackage[CJKecglue={\hskip 0pt}]{xeCJK}
 \xeCJKsetup{PunctStyle=plain}
-\setCJKmainfont[ItalicFont=TW-Kai]{Source Han Serif CN}
-\setCJKsansfont{Source Han Sans CN}
-\setCJKmonofont{TW-Kai}
+\setCJKmainfont[FallBack=DejaVu Serif, ItalicFont=KaiTi]{Source Han Serif CN}
+\setCJKsansfont[FallBack=DejaVu Sans]{Source Han Sans CN}
+\setCJKmonofont[FallBack=DejaVu Sans Mono]{KaiTi}
 
 
 \begin{document}
