--- a/配置参考/pdf_book.tex
+++ b/配置参考/pdf_book.tex
@@ -126,7 +126,7 @@
 \RequirePackage{xeCJKfntef}
 
 \let\oldemph\emph % Save emph in oldemph
-\renewcommand{\emph}[1]{\textcolor{red}{#1}}  
+\renewcommand{\emph}[1]{\textcolor{blue}{\textbf{#1}}}  
 
 %==================插入圖片=======%
 \RequirePackage{wrapfig}
