--- a/配置参考/pdf_book.tex
+++ b/配置参考/pdf_book.tex
@@ -205,11 +205,15 @@
 \chapter{留肾精}
 
 
+\appendix
 \part{附录}
 \chapter{术语释义}
 
 
-\chapter{参考资料}
+
+\backmatter
+\chapter*{参考资料}
+\addchtoc{参考资料}
 \begin{thebibliography}{99}
 \bibitem[黄帝内经]{黄帝内经} 《黄帝内经》.
 
