--- a/main.tex
+++ b/main.tex
@@ -2734,6 +2734,10 @@ $\Xi$ & Xi  &$\Omega$ & Omega  & & & & & & \\
 \subsection{表达式上划线或者下划线}
 就是\textbf{overline}命令和\textbf{underline}命令。此外还有一个bar命令，但bar命令只适合一个小写字母情况的上划线情况，如这样 $\bar{a}$ \verb+$\bar{a}$+ ，其他情况即使是大写字母也不行。
 
+\begin{Verbatim}
+$\overline{x+y}$  $\underline{\frac{2}{3}}$
+\end{Verbatim}
+
 $\overline{x+y}$  $\underline{\frac{2}{3}}$
 
 对于统计学上的样本均值就是使用的这里的overline命令：\\
@@ -2742,6 +2746,10 @@ $\overline{X}$  \verb+$\overline{X}$+ 。
 
 \subsection{表达式上或下有个大括号}
 使用\textbf{overbrace}和\textbf{underbrace}命令。
+
+\begin{Verbatim}
+$\underbrace{ a+b+\cdots+z }_{26}$
+\end{Verbatim}
 
 $\underbrace{ a+b+\cdots+z }_{26}$
 
